Centered the title correction: could've added text-align center in the body selector this would've centered both the title text(information!) and the other items.
Added some margin between title and items
correction: only needed to create space between title and the items
so margin-bottom in the .title class would've been better

Added a container class(see index.html file)
this will contain all the items and will allowed me to arrange them
horizontally with display flex as well as center them horizontally
on the page
solution: for space he added a gap of 52px in his .container class
while I had 52 px margin inside my .wrapper

Added a wrapper around images and their text(see index.html file)
this will allow me to have the text wrap onto the next line
(under the images) and center the image within the wrapper
important solution/correction: he simply used the line max-width whereas
I made .wrapper a flex container and used flex-wrap/justify content
the reason why this works for him is he used text-align center in the
body selector.

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 
 img {
@@ -10,6 +10,22 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin: 32px;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+.wrapper {
+  margin: 52px; /*create 52 px of space between each item see inspect mode to verify */
+  width: 200px; /*make the items 200px wide */
+  text-align: center; /*centers the text */
+  display: flex;
+  flex-wrap: wrap; /*make the text wrap to the next line, this puts the text under the image */
+  justify-content: center; /*makes sur that items are centered horizontally */
 }
 
 /* do not edit this footer */
